--- a/Copy_of_69_acc.ipynb
+++ b/Copy_of_69_acc.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsCP/FDKc2aA/YJ7pEABRx",
+      "authorship_tag": "ABX9TyO46oMnA6ackP+PIR4aCZXN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3230,7 +3230,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finally Balanced data\n"
+        "Finally Balanced data\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "TTgrD8gDf4HC"
